2010-07-22 19:35-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSTheme.m: Call method _setArchiveByName: with YES so that
	images loaded by a theme will not be persisted as image data, but
	rather as references.  This will avoid an issue with saving theme
	images when saving files in Gorm while a theme is loaded.
	* Source/NSImage.m: Added method _setArchiveByName:.

2010-07-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuView.m (-setWindowFrameForAttachingToRect...):
	Resize the menu view if needed. This should correct part of bug #30025.

2010-07-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSPopUpButtonCell.m (-setMenuView:): Override super class
	method so that the button's appearance is not inadvertently
	changed when the menu view is set.

2010-06-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSMenuView.m (-sizeToFit): Correctly take into account
	that the first item of a pull down menu is not visible.

	* Source/NSMenuView.m (-setHorizontal:): Ensure that the layout is
	recomputed after changing the view from vertical to horizontal and
	vice versa.

2010-06-22 Doug Simons <doug.simons@testplant.com>

	* Source/NSButton.m:
	* Source/NSMatrix.m:
	* Source/NSMenu.m:
	Further change to performKeyEquivalent: methods to take Shift key
	into account for control keys (such as Return and Tab) as well as
	function keys, and to honor keyEquivalentModifierMask for cells in
	a matrix that implement that method. Also, ignore key events with
	zero length (such as the Windows key) which was previously triggering
	actions on objects with no keyEquivalent.

2010-06-22  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSPopUpButtonCell.m (-initTextCell:pullsDown:, -initWithCoder:,
	-_currentArrowImage:, -attachPopUpWithFrame:inView:): Swap meaning
	of NSMinYEdge and NSMaxYEdge to match their use in Cocoa. Recall
	that pop up buttons use flipped geometry.

2010-06-22  Wolfgang Lux  <wolfgang.lux@gmail.com>
