@@ -1,3 +1,10 @@
+2010-07-25 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSBrowser.m,
+	* Source/NSInputManager.m,
+	* Source/NSMatrix.m,
+	* Source/NSWindow.m: Add support for backtab character.
+
 2010-07-22 19:35-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Source/GSTheme.m: Call method _setArchiveByName: with YES so that
